--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ h1{
   margin: 0 0 0 0;
   padding: 0 0 0 0;
 }
+h2{
+  font-size: 48px;
+  margin: 0 0 0 0;
+}
 h3{
   font-size: 28px;
 }
@@ -84,42 +88,39 @@ p{
   width: 100%;
 }
 
-.container{
-  display: flex;
-}
-.all-highlights{
-  width: 70%;
-  margin-left: 182px;
-}
-.field{
-  width: 100%;
-}
+/* animation section */
 
 @keyframes sliding {
   0%{
     background-color: crimson;
     left: 0;
-    top: 250px;
+    top: 0px;
   }
   50%{
-    top: 350px;
+    top: 200px;
     right: 250px;
   }
   
   100%{
     background-color: springgreen;
-    left: 300px;
-    top: 100px;
+    left: 295px;
+    top: 60px;
     width: 200px;
     height: 200px;
   }
   
 }
+.container{
+  display: flex;
+ margin-top: 30px;
+ margin-left: 180px;
+ margin-right: 210px;
+}
 .field{
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 350px;
+  margin-right: 30px;
   background-color: darkkhaki;
-  margin-right: 200px;
 }
 .ball img{
   width: 50px;
@@ -130,6 +131,10 @@ p{
   position: relative;
 }
 
+/* Highlights (bonus part-2) */
+.highlights{
+  width: 100%;
+}
 /* footer */
 
 .footer{
@@ -158,5 +163,9 @@ p{
 }
 .fab{
   font-size: 17px;
+  color: black;
   background-color: #969BAB;
+}
+.a:visited{
+  /* color: black; */
 }
