--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ p{
   margin-bottom: 169px;
 }
 .watch-now:hover{
-  transform: rotate(360deg);
+  transform: translate(50px);
   transition: transform 2s;
 }
 .top-player img{
@@ -97,13 +97,13 @@ p{
     top: 0px;
   }
   50%{
-    top: 200px;
+    top: 230px;
     right: 250px;
   }
   
   100%{
     background-color: springgreen;
-    left: 295px;
+    left: 265px;
     top: 60px;
     width: 200px;
     height: 200px;
@@ -118,7 +118,7 @@ p{
 }
 .field{
   width: 100%;
-  height: 350px;
+  height: 370px;
   margin-right: 30px;
   background-color: darkkhaki;
 }
@@ -132,10 +132,12 @@ p{
 }
 
 /* Highlights (bonus part-2) */
+
 .highlights{
   width: 100%;
 }
-/* footer */
+
+/* footer section */
 
 .footer{
   margin-top: 50px;
@@ -166,6 +168,16 @@ p{
   color: black;
   background-color: #969BAB;
 }
-.a:visited{
-  /* color: black; */
+
+/* Responsive layout */
+
+/* Mobile device */
+
+@media only screen and (max-width: 668px) {
+  .copa-2021{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    
+  }
+  .
 }
