--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ p{
   }
   .top-player img{
     width: 100%;
-    margin-top: 60%;
+    margin-top: 30%;
   }
   .players{
     margin: 20px;
@@ -210,5 +210,30 @@ margin: ;
   }
   .highlights{
     width: 90%;
+  }
+}
+
+/* tablet devices */
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  .top-section{
+    width: 100%;
+    height: 100%;
+  }
+  .copa-2021{
+    flex-direction: column;
+  }
+  .heading{
+    width: 100%;
+    margin-left: 10px;
+  }
+  .top-player{
+  margin-left: 100px;
+  }
+  .players{
+    margin: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
   }
 }
