--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ p{
 
 @keyframes sliding {
   0%{
-    background-color: crimson;
     left: 0;
     top: 0px;
   }
@@ -102,7 +101,6 @@ p{
   }
   
   100%{
-    background-color: springgreen;
     left: 265px;
     top: 60px;
     width: 200px;
@@ -117,7 +115,7 @@ p{
  margin-right: 210px;
 }
 .field{
-  width: 100%;
+  width: 950px;
   height: 370px;
   margin-right: 30px;
   background-color: darkkhaki;
@@ -134,13 +132,14 @@ p{
 /* Highlights (bonus part-2) */
 
 .highlights{
-  width: 100%;
+  width: 950px;
+  height: 370px;
 }
 
 /* footer section */
 
 .footer{
-  margin-top: 50px;
+  margin-top: 158px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -197,19 +196,17 @@ p{
     justify-content: center;
   }
   .container{
+    width: 100%;
+    margin: 50px;
     flex-direction: column;
     align-items: center;
-    margin: 0px;
-    margin-left: 20px;
   }
   .container, .field{
-    width: 100%;
-  }
-  .field{
-margin: ;
+    width: 94%;
   }
   .highlights{
-    width: 90%;
+    width: 94%;
+    height: 250px;
   }
 }
 
@@ -225,7 +222,7 @@ margin: ;
   }
   .heading{
     width: 100%;
-    margin-left: 10px;
+    margin-left: 100px;
   }
   .top-player{
   margin-left: 100px;
@@ -235,5 +232,18 @@ margin: ;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     justify-content: center;
+  }
+  .container{
+    width: 100%;
+    margin: 45px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container, .field{
+    width: 96%;
+  }
+  .highlights{
+    width: 96%;
+    height: 200px;
   }
 }
